--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Overview</title>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reset-css@3.0.0/reset.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="//fonts.googleapis.com/css?family=Quando:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic%7CJosefin+Sans:100,100italic,200,200italic,300,300italic,400,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
-      type="text/css"
-      media="all"
-    />
-    <link rel="stylesheet" href="/assets/css/style.css" />
+  <title>Overview</title>
 
-    <script
-      src="https://kit.fontawesome.com/2216cb6a92.js"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body></body>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@3.0.0/reset.min.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
+</head>
+
+<body>
+  <!-- nav bar https://getbootstrap.com/docs/5.0/examples/sidebars/# -->
+  <nav class="vh-100 d-flex flex-column  justify-content-start sidebar" style="width: 280px;">
+    <a href="/" class="d-flex mx-auto text-decoration-none mt-4 mb-5">
+      <img src="/assets/logo.svg" alt="" class=" me-3">
+      <span class="fs-4 fw-bold text-secondary">Dashboard Kit</span>
+    </a>
+    <ul class="nav flex-column">
+      <li class="nav-item">
+        <a href="#" class="nav-link active" aria-current="page">
+          <img src="/assets/overview.svg" alt="" class="me-3">
+          Overview
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary">
+          <img src="/assets/tickets.svg" alt="" class="me-3">
+          Tickets
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary">
+          <img src="/assets/ideas.svg" alt="" class="me-3">
+          Ideas
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary">
+          <img src="/assets/contacts.svg" alt="" class="me-3">
+          Contacts
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary">
+          <img src="/assets/agents.svg" alt="" class="me-3">
+          Agents
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary">
+          <img src="/assets/articles.svg" alt="" class="me-3">
+          Articles
+        </a>
+      </li>
+    </ul>
+    <hr class="border-secondary border-2">
+    <ul class="nav flex-column gap-2 mb-auto">
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary">
+          <img src="/assets/settings.svg" alt="" class="me-3">
+          Settings
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="#" class="nav-link text-secondary">
+          <img src="/assets/subscription.svg" alt="" class="me-3">
+          Subscription
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <main class="container-fluid">
+
+  </main>
+</body>
+
 </html>
