--- a/public/index.html
+++ b/public/index.html
@@ -13,69 +13,82 @@
 </head>
 
 <body>
-  <!-- nav bar https://getbootstrap.com/docs/5.0/examples/sidebars/# -->
-  <nav class="vh-100 d-flex flex-column  justify-content-start sidebar" style="width: 280px;">
-    <a href="/" class="d-flex mx-auto text-decoration-none mt-4 mb-5">
-      <img src="/assets/logo.svg" alt="" class=" me-3">
-      <span class="fs-4 fw-bold text-secondary">Dashboard Kit</span>
-    </a>
-    <ul class="nav flex-column">
-      <li class="nav-item">
-        <a href="#" class="nav-link active" aria-current="page">
-          <img src="/assets/overview.svg" alt="" class="me-3">
-          Overview
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link text-secondary">
-          <img src="/assets/tickets.svg" alt="" class="me-3">
-          Tickets
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link text-secondary">
-          <img src="/assets/ideas.svg" alt="" class="me-3">
-          Ideas
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link text-secondary">
-          <img src="/assets/contacts.svg" alt="" class="me-3">
-          Contacts
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link text-secondary">
-          <img src="/assets/agents.svg" alt="" class="me-3">
-          Agents
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link text-secondary">
-          <img src="/assets/articles.svg" alt="" class="me-3">
-          Articles
-        </a>
-      </li>
-    </ul>
-    <hr class="border-secondary border-2">
-    <ul class="nav flex-column gap-2 mb-auto">
-      <li class="nav-item">
-        <a href="#" class="nav-link text-secondary">
-          <img src="/assets/settings.svg" alt="" class="me-3">
-          Settings
-        </a>
-      </li>
-      <li class="nav-item">
-        <a href="#" class="nav-link text-secondary">
-          <img src="/assets/subscription.svg" alt="" class="me-3">
-          Subscription
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <main class="container-fluid">
+  <div class="d-flex vh-100">
+    <!-- nav bar https://getbootstrap.com/docs/5.0/examples/sidebars/# -->
+    <nav class="flex-column justify-content-start sidebar">
+      <a href="/" class="d-flex mx-auto text-decoration-none mt-4 mb-5">
+        <img src="/assets/logo.svg" alt="" class=" me-3">
+        <span class="fs-4 fw-bold text-secondary">Dashboard Kit</span>
+      </a>
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a href="#" class="nav-link active" aria-current="page">
+            <img src="/assets/overview.svg" alt="" class="me-3">
+            Overview
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-secondary">
+            <img src="/assets/tickets.svg" alt="" class="me-3">
+            Tickets
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-secondary">
+            <img src="/assets/ideas.svg" alt="" class="me-3">
+            Ideas
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-secondary">
+            <img src="/assets/contacts.svg" alt="" class="me-3">
+            Contacts
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-secondary">
+            <img src="/assets/agents.svg" alt="" class="me-3">
+            Agents
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-secondary">
+            <img src="/assets/articles.svg" alt="" class="me-3">
+            Articles
+          </a>
+        </li>
+      </ul>
+      <hr class="border-secondary border-2">
+      <ul class="nav flex-column gap-2 mb-auto">
+        <li class="nav-item">
+          <a href="#" class="nav-link text-secondary">
+            <img src="/assets/settings.svg" alt="" class="me-3">
+            Settings
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link text-secondary">
+            <img src="/assets/subscription.svg" alt="" class="me-3">
+            Subscription
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <main class="container-fluid">
+      <div class="d-flex align-items-center pt-2">
+        <div class="d-flex flex-grow-1 border-end border-secondary-subtle">
+          <h1 class="flex-grow-1 fs-2">Overview</h1>
+          <img src="assets/search.svg" alt="Search" class="me-4">
+          <img src="assets/notifications.svg" alt="Notification" class="me-4">
+        </div>
+        <div class="d-flex align-items-center">
+          <span class="mx-3">Beth Sun</span>
+          <img src="assets/user.jpg" alt="Profile" class="img-thumbnail rounded-circle profile">
+        </div>
+      </div>
 
-  </main>
+    </main>
+  </div>
 </body>
 
 </html>
