--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@
       </ul>
     </nav>
     <main class="container-fluid">
+      <!-- title bar -->
       <div class="d-flex align-items-center pt-2">
         <div class="d-flex flex-grow-1 border-end border-secondary-subtle">
           <h1 class="flex-grow-1 fs-2">Overview</h1>
@@ -86,7 +87,49 @@
           <img src="assets/user.jpg" alt="Profile" class="img-thumbnail rounded-circle profile">
         </div>
       </div>
-
+      <!-- row of ticket blocks -->
+      <div></div>
+      <!-- today's trend graph -->
+      <div class="card d-flex graph-card">
+        <div class="d-flex flex-column p-2">
+          <h2 class="fs-4">Today's trends</h2>
+          <div class="d-flex gap-3 text-secondary">
+            <p class="flex-grow-1">as of 20 March 2024, 01:20 AM</p>
+            <div>
+              <svg width="18" height="2" viewBox="0 0 18 2" fill="none" xmlns="http://www.w3.org/2000/svg" class="me-1">
+                <path d="M1 1H17" stroke="#3751FF" stroke-width="2" stroke-linecap="round" />
+              </svg>
+              Today
+            </div>
+            <div>
+              <svg width="18" height="2" viewBox="0 0 18 2" fill="none" xmlns="http://www.w3.org/2000/svg" class="me-1">
+                <path d="M1 1H17" stroke="#DFE0EB" stroke-width="2" stroke-linecap="round" />
+              </svg>
+              Yesterday
+            </div>
+          </div>
+          <img src="assets/graph.svg" class="w-100" alt="graph">
+        </div>
+        <ul class="list-group list-group-flush border-start flex-grow-1 justify-content-between">
+          <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+            <h3 class="fs-6 text-secondary">Resolved</h3><span class="fw-bold">449</span>
+          </li>
+          <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+            <h3 class="fs-6 text-secondary">Received</h3><span class="fw-bold">426</span>
+          </li>
+          <li
+            class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1 text-nowrap">
+            <h3 class="fs-6 text-secondary">Average first response time</h3><span class="fw-bold">33m</span>
+          </li>
+          <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+            <h3 class="fs-6 text-secondary">Average response time</h3><span class="fw-bold">3h 8m</span>
+          </li>
+          <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+            <h3 class="fs-6 text-secondary">Resolution within SLA</h3><span class="fw-bold">94%</span>
+          </li>
+        </ul>
+      </div>
+      <!-- row of 2 content blocks -->
     </main>
   </div>
 </body>
