--- a/public/index.html
+++ b/public/index.html
@@ -76,21 +76,46 @@
     </nav>
     <main class="container-fluid">
       <!-- title bar -->
-      <div class="d-flex align-items-center pt-2">
+      <div class="d-flex align-items-center pt-4">
         <div class="d-flex flex-grow-1 border-end border-secondary-subtle">
           <h1 class="flex-grow-1 fs-2">Overview</h1>
           <img src="assets/search.svg" alt="Search" class="me-4">
           <img src="assets/notifications.svg" alt="Notification" class="me-4">
         </div>
         <div class="d-flex align-items-center">
-          <span class="mx-3">Beth Sun</span>
+          <span class="mx-3 username">Beth Sun</span>
           <img src="assets/user.jpg" alt="Profile" class="img-thumbnail rounded-circle profile">
         </div>
       </div>
       <!-- row of ticket blocks -->
-      <div></div>
+      <div class="d-flex ticket-blocks-row mt-5">
+        <div class="card">
+          <div class="card-body d-flex flex-column align-items-center justify-content-center">
+            <h2 class="fs-4 text-secondary">Unresolved</h2>
+            <p class="fs-1 fw-bold">60</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body d-flex flex-column align-items-center justify-content-center">
+            <h2 class="fs-4 text-secondary">Overdue</h2>
+            <p class="fs-1 fw-bold">16</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body d-flex flex-column align-items-center justify-content-center">
+            <h2 class="fs-4 text-secondary">Open</h2>
+            <p class="fs-1 fw-bold">43</p>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body d-flex flex-column align-items-center justify-content-center">
+            <h2 class="fs-4 text-secondary">On hold</h2>
+            <p class="fs-1 fw-bold">64</p>
+          </div>
+        </div>
+      </div>
       <!-- today's trend graph -->
-      <div class="card d-flex graph-card">
+      <div class="card d-flex graph-card mt-4">
         <div class="d-flex flex-column p-2">
           <h2 class="fs-4">Today's trends</h2>
           <div class="d-flex gap-3 text-secondary">
