--- a/public/index.html
+++ b/public/index.html
@@ -74,7 +74,7 @@
         </li>
       </ul>
     </nav>
-    <main class="container-fluid">
+    <main class="container-fluid vh-100 overflow-y-auto">
       <!-- title bar -->
       <div class="d-flex align-items-center pt-4">
         <div class="d-flex flex-grow-1 border-end border-secondary-subtle">
@@ -116,9 +116,9 @@
       </div>
       <!-- today's trend graph -->
       <div class="card d-flex graph-card mt-4">
-        <div class="d-flex flex-column p-2">
-          <h2 class="fs-4">Today's trends</h2>
-          <div class="d-flex gap-3 text-secondary">
+        <div class="card-body d-flex flex-column">
+          <h2 class="fs-4 card-title">Today's trends</h2>
+          <div class="d-flex gap-3 text-secondary card-text">
             <p class="flex-grow-1">as of 20 March 2024, 01:20 AM</p>
             <div>
               <svg width="18" height="2" viewBox="0 0 18 2" fill="none" xmlns="http://www.w3.org/2000/svg" class="me-1">
@@ -154,7 +154,37 @@
           </li>
         </ul>
       </div>
-      <!-- row of 2 content blocks -->
+      <!-- row of 2 content blocks (grid) -->
+      <div class="grid my-4 content-block-grid">
+        <div class="card px-0 col-12 col-sm-6">
+          <div class="card-body">
+            <div class="d-flex justify-content-between align-items-center">
+              <h2 class=" fs-4 card-title">Unresolved tickets</h2>
+              <a href="#" class="text-decoration-none">View details</a>
+            </div>
+            <p class="card-text"><span class="text-secondary">Group:</span> Support</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item d-flex justify-content-between">
+              <span class="fw-bold">Waiting on Feature Request</span>
+              <span class="text-secondary">4238</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <span class="fw-bold">Awaiting Customer Response</span>
+              <span class="text-secondary">1005</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <span class="fw-bold">Awaiting Developer Fix</span>
+              <span class="text-secondary">914</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between">
+              <span class="fw-bold">Pending</span>
+              <span class="text-secondary">281</span>
+            </li>
+          </ul>
+        </div>
+
+      </div>
     </main>
   </div>
 </body>
