--- a/public/index.html
+++ b/public/index.html
@@ -13,62 +13,62 @@
 </head>
 
 <body>
-  <div class="d-flex vh-100">
+  <div class="d-flex vh-100 flex-column flex-sm-row">
     <!-- nav bar https://getbootstrap.com/docs/5.0/examples/sidebars/# -->
     <nav class="flex-column justify-content-start sidebar">
-      <a href="/" class="d-flex mx-auto text-decoration-none mt-4 mb-5">
-        <img src="/assets/logo.svg" alt="" class=" me-3">
+      <div class="mx-auto text-decoration-none mt-4 mb-2 mb-sm-5 text-center">
+        <img src="/assets/logo.svg" alt="Logo" class=" me-3">
         <span class="fs-4 fw-bold text-secondary">Dashboard Kit</span>
-      </a>
-      <ul class="nav flex-column">
+      </div>
+      <ul class="nav flex-column d-none d-sm-block">
         <li class="nav-item">
           <a href="#" class="nav-link active" aria-current="page">
-            <img src="/assets/overview.svg" alt="" class="me-3">
+            <img src="/assets/overview.svg" alt="Overview" class="me-3">
             Overview
           </a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link text-secondary">
-            <img src="/assets/tickets.svg" alt="" class="me-3">
+            <img src="/assets/tickets.svg" alt="Tickets" class="me-3">
             Tickets
           </a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link text-secondary">
-            <img src="/assets/ideas.svg" alt="" class="me-3">
+            <img src="/assets/ideas.svg" alt="Ideas" class="me-3">
             Ideas
           </a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link text-secondary">
-            <img src="/assets/contacts.svg" alt="" class="me-3">
+            <img src="/assets/contacts.svg" alt="Contacts" class="me-3">
             Contacts
           </a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link text-secondary">
-            <img src="/assets/agents.svg" alt="" class="me-3">
+            <img src="/assets/agents.svg" alt="Agents" class="me-3">
             Agents
           </a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link text-secondary">
-            <img src="/assets/articles.svg" alt="" class="me-3">
+            <img src="/assets/articles.svg" alt="Articles" class="me-3">
             Articles
           </a>
         </li>
       </ul>
-      <hr class="border-secondary border-2">
-      <ul class="nav flex-column gap-2 mb-auto">
+      <hr class="border-secondary border-2 d-none d-sm-block">
+      <ul class="nav flex-column gap-2 mb-auto d-none d-sm-block">
         <li class="nav-item">
           <a href="#" class="nav-link text-secondary">
-            <img src="/assets/settings.svg" alt="" class="me-3">
+            <img src="/assets/settings.svg" alt="Settings" class="me-3">
             Settings
           </a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link text-secondary">
-            <img src="/assets/subscription.svg" alt="" class="me-3">
+            <img src="/assets/subscription.svg" alt="Subscription" class="me-3">
             Subscription
           </a>
         </li>
@@ -79,147 +79,172 @@
       <div class="d-flex align-items-center pt-4">
         <div class="d-flex flex-grow-1 border-end border-secondary-subtle">
           <h1 class="flex-grow-1 fs-2">Overview</h1>
-          <img src="assets/search.svg" alt="Search" class="me-4">
-          <img src="assets/notifications.svg" alt="Notification" class="me-4">
+          <a href="#" class="me-4 d-flex align-items-center"><img src="assets/search.svg" alt="Search"></a>
+          <a href="#" class="me-4 d-flex align-items-center"><img src="assets/notifications.svg" alt="Notification"></a>
         </div>
         <div class="d-flex align-items-center">
-          <span class="mx-3 username">Beth Sun</span>
-          <img src="assets/user.jpg" alt="Profile" class="img-thumbnail rounded-circle profile">
+          <span class="ms-3 d-none d-sm-block">Beth Sun</span>
+          <img src="assets/user.jpg" alt="Profile" class="img-thumbnail rounded-circle ms-3 profile">
         </div>
       </div>
       <!-- row of ticket blocks -->
-      <div class="d-flex ticket-blocks-row mt-5">
-        <div class="card">
-          <div class="card-body d-flex flex-column align-items-center justify-content-center">
-            <h2 class="fs-4 text-secondary">Unresolved</h2>
-            <p class="fs-1 fw-bold">60</p>
+      <div class="container mt-5">
+        <div class="row gx-3">
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="card">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                <h2 class="fs-4 text-secondary">Unresolved</h2>
+                <p class="fs-1 fw-bold">60</p>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="card-body d-flex flex-column align-items-center justify-content-center">
-            <h2 class="fs-4 text-secondary">Overdue</h2>
-            <p class="fs-1 fw-bold">16</p>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="card">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                <h2 class="fs-4 text-secondary">Overdue</h2>
+                <p class="fs-1 fw-bold">16</p>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="card-body d-flex flex-column align-items-center justify-content-center">
-            <h2 class="fs-4 text-secondary">Open</h2>
-            <p class="fs-1 fw-bold">43</p>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="card">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                <h2 class="fs-4 text-secondary">Open</h2>
+                <p class="fs-1 fw-bold">43</p>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="card">
-          <div class="card-body d-flex flex-column align-items-center justify-content-center">
-            <h2 class="fs-4 text-secondary">On hold</h2>
-            <p class="fs-1 fw-bold">64</p>
+          <div class="col-12 col-sm-6 col-md-3">
+            <div class="card">
+              <div class="card-body d-flex flex-column align-items-center justify-content-center">
+                <h2 class="fs-4 text-secondary text-nowrap">On hold</h2>
+                <p class="fs-1 fw-bold">64</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <!-- today's trend graph -->
-      <div class="card d-flex graph-card mt-4">
-        <div class="card-body d-flex flex-column">
-          <h2 class="fs-4 card-title">Today's trends</h2>
-          <div class="d-flex gap-3 text-secondary card-text">
-            <p class="flex-grow-1">as of 20 March 2024, 01:20 AM</p>
-            <div>
-              <svg width="18" height="2" viewBox="0 0 18 2" fill="none" xmlns="http://www.w3.org/2000/svg" class="me-1">
-                <path d="M1 1H17" stroke="#3751FF" stroke-width="2" stroke-linecap="round" />
-              </svg>
-              Today
+      <div class="container">
+        <div class="card d-flex graph-card mt-4 flex-column flex-md-row justify-content-between">
+          <div class="card-body d-flex flex-column">
+            <h2 class="fs-4 card-title">Today's trends</h2>
+            <div class="d-flex gap-3 text-secondary card-text">
+              <p class="flex-grow-1">as of 20 March 2024, 01:20 AM</p>
+              <div>
+                <svg width="18" height="2" viewBox="0 0 18 2" fill="none" xmlns="http://www.w3.org/2000/svg"
+                  class="me-1">
+                  <path d="M1 1H17" stroke="#3751FF" stroke-width="2" stroke-linecap="round" />
+                </svg>
+                Today
+              </div>
+              <div>
+                <svg width="18" height="2" viewBox="0 0 18 2" fill="none" xmlns="http://www.w3.org/2000/svg"
+                  class="me-1">
+                  <path d="M1 1H17" stroke="#DFE0EB" stroke-width="2" stroke-linecap="round" />
+                </svg>
+                Yesterday
+              </div>
             </div>
-            <div>
-              <svg width="18" height="2" viewBox="0 0 18 2" fill="none" xmlns="http://www.w3.org/2000/svg" class="me-1">
-                <path d="M1 1H17" stroke="#DFE0EB" stroke-width="2" stroke-linecap="round" />
-              </svg>
-              Yesterday
-            </div>
+            <img src="assets/graph.svg" class="w-100" alt="graph">
           </div>
-          <img src="assets/graph.svg" class="w-100" alt="graph">
+          <ul class="list-group list-group-flush border-start flex-grow-1 justify-content-between border-top-0">
+            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+              <h3 class="fs-6 text-secondary">Resolved</h3><span class="fw-bold">449</span>
+            </li>
+            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+              <h3 class="fs-6 text-secondary">Received</h3><span class="fw-bold">426</span>
+            </li>
+            <li
+              class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1 text-nowrap">
+              <h3 class="fs-6 text-secondary">Average first response time</h3><span class="fw-bold">33m</span>
+            </li>
+            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+              <h3 class="fs-6 text-secondary">Average response time</h3><span class="fw-bold">3h 8m</span>
+            </li>
+            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
+              <h3 class="fs-6 text-secondary">Resolution within SLA</h3><span class="fw-bold">94%</span>
+            </li>
+          </ul>
         </div>
-        <ul class="list-group list-group-flush border-start flex-grow-1 justify-content-between">
-          <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
-            <h3 class="fs-6 text-secondary">Resolved</h3><span class="fw-bold">449</span>
-          </li>
-          <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
-            <h3 class="fs-6 text-secondary">Received</h3><span class="fw-bold">426</span>
-          </li>
-          <li
-            class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1 text-nowrap">
-            <h3 class="fs-6 text-secondary">Average first response time</h3><span class="fw-bold">33m</span>
-          </li>
-          <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
-            <h3 class="fs-6 text-secondary">Average response time</h3><span class="fw-bold">3h 8m</span>
-          </li>
-          <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
-            <h3 class="fs-6 text-secondary">Resolution within SLA</h3><span class="fw-bold">94%</span>
-          </li>
-        </ul>
       </div>
       <!-- row of 2 content blocks (grid) -->
-      <div class="d-flex gap-3 my-4 content-block-grid">
-        <div class="card flex-grow-1">
-          <div class="card-body">
-            <div class="d-flex justify-content-between align-items-center">
-              <h2 class=" fs-4 card-title">Unresolved tickets</h2>
-              <a href="#" class="text-decoration-none">View details</a>
+      <div class="container mt-4">
+        <div class="row gx-3 gy-3">
+          <div class="col-12 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <h2 class=" fs-4 card-title">Unresolved tickets</h2>
+                  <a href="#" class="text-decoration-none">View details</a>
+                </div>
+                <p class="card-text"><span class="text-secondary">Group:</span> Support</p>
+              </div>
+              <ul class="list-group list-group-flush border-top-0">
+                <li class="list-group-item d-flex justify-content-between">
+                  <span class="fw-bold">Waiting on Feature Request</span>
+                  <span class="text-secondary">4238</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between">
+                  <span class="fw-bold">Awaiting Customer Response</span>
+                  <span class="text-secondary">1005</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between">
+                  <span class="fw-bold">Awaiting Developer Fix</span>
+                  <span class="text-secondary">914</span>
+                </li>
+                <li class="list-group-item d-flex justify-content-between">
+                  <span class="fw-bold">Pending</span>
+                  <span class="text-secondary">281</span>
+                </li>
+              </ul>
             </div>
-            <p class="card-text"><span class="text-secondary">Group:</span> Support</p>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item d-flex justify-content-between">
-              <span class="fw-bold">Waiting on Feature Request</span>
-              <span class="text-secondary">4238</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span class="fw-bold">Awaiting Customer Response</span>
-              <span class="text-secondary">1005</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span class="fw-bold">Awaiting Developer Fix</span>
-              <span class="text-secondary">914</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span class="fw-bold">Pending</span>
-              <span class="text-secondary">281</span>
-            </li>
-          </ul>
-        </div>
 
-        <div class="card flex-grow-1">
-          <div class="card-body">
-            <div class="d-flex justify-content-between align-items-center">
-              <h2 class="fs-4 card-title">Tasks</h2>
-              <a href="#" class="text-decoration-none">View all</a>
+          <div class="col-12 col-md-6">
+            <div class="card">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <h2 class="fs-4 card-title">Tasks</h2>
+                  <a href="#" class="text-decoration-none">View all</a>
+                </div>
+                <p class="card-text text-secondary">Today</p>
+              </div>
+              <form>
+                <ul class="list-group list-group-flush border-top-0">
+                  <li class="list-group-item d-flex justify-content-between">
+                    <span class="fw-bold text-secondary">Create new task</span>
+                    <button type="button" class="btn btn-sm btn-outline-secondary"><img src="assets/plus.svg"
+                        alt="Add"></button>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input rounded-circle" type="checkbox" name="tasks"
+                        value="Finish Ticket Update" id="task1">
+                      <label class="form-check-label fw-bold" for="task1">Finish ticket update</label>
+                    </div>
+                    <span class="badge text-bg-warning d-flex align-items-center">URGENT</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input rounded-circle" type="checkbox" name="tasks"
+                        value="Finish Ticket Update" id="task2">
+                      <label class="form-check-label fw-bold" for="task2">Create new ticket example</label>
+                    </div>
+                    <span class="badge text-bg-success d-flex align-items-center">NEW</span>
+                  </li>
+                  <li class="list-group-item d-flex justify-content-between">
+                    <div class="form-check form-check-inline">
+                      <input class="form-check-input rounded-circle" type="checkbox" name="tasks"
+                        value="Update ticket report" id="task3" checked>
+                      <label class="form-check-label fw-bold" for="task3">Update ticket report</label>
+                    </div>
+                    <span class="badge text-bg-secondary d-flex align-items-center">DEFAULT</span>
+                  </li>
+                </ul>
+              </form>
             </div>
-            <p class="card-text text-secondary">Today</p>
           </div>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item d-flex justify-content-between">
-              <span class="fw-bold text-secondary">Create new task</span>
-              <button type="button" class="btn btn-sm btn-outline-secondary"><img src="assets/plus.svg"
-                  alt="Add"></button>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="tasks" value="Finish Ticket Update" id="task1">
-                <label class="form-check-label fw-bold" for="task1">Finish ticket update</label>
-              </div>
-              <span class="badge text-bg-warning d-flex align-items-center">URGENT</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="tasks" value="Finish Ticket Update" id="task2">
-                <label class="form-check-label fw-bold" for="task2">Create new ticket example</label>
-              </div>
-              <span class="badge text-bg-success d-flex align-items-center">NEW</span>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="tasks" value="Update ticket report" id="task3">
-                <label class="form-check-label fw-bold" for="task3">Update ticket report</label>
-              </div>
-              <span class="badge text-bg-secondary d-flex align-items-center">DEFAULT</span>
-            </li>
-          </ul>
         </div>
       </div>
     </main>
