--- a/public/index.html
+++ b/public/index.html
@@ -89,39 +89,7 @@
       </div>
       <!-- row of ticket blocks -->
       <div class="container mt-5">
-        <div class="row gx-3">
-          <div class="col-12 col-sm-6 col-md-3">
-            <div class="card">
-              <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                <h2 class="fs-4 text-secondary">Unresolved</h2>
-                <p class="fs-1 fw-bold">60</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <div class="card">
-              <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                <h2 class="fs-4 text-secondary">Overdue</h2>
-                <p class="fs-1 fw-bold">16</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <div class="card">
-              <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                <h2 class="fs-4 text-secondary">Open</h2>
-                <p class="fs-1 fw-bold">43</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-sm-6 col-md-3">
-            <div class="card">
-              <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                <h2 class="fs-4 text-secondary text-nowrap">On hold</h2>
-                <p class="fs-1 fw-bold">64</p>
-              </div>
-            </div>
-          </div>
+        <div class="row gx-3" id="overview">
         </div>
       </div>
       <!-- today's trend graph -->
@@ -249,6 +217,7 @@
       </div>
     </main>
   </div>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
