--- a/public/index.html
+++ b/public/index.html
@@ -116,23 +116,8 @@
             </div>
             <img src="assets/graph.svg" class="w-100" alt="graph">
           </div>
-          <ul class="list-group list-group-flush border-start flex-grow-1 justify-content-between border-top-0">
-            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
-              <h3 class="fs-6 text-secondary">Resolved</h3><span class="fw-bold">449</span>
-            </li>
-            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
-              <h3 class="fs-6 text-secondary">Received</h3><span class="fw-bold">426</span>
-            </li>
-            <li
-              class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1 text-nowrap">
-              <h3 class="fs-6 text-secondary">Average first response time</h3><span class="fw-bold">33m</span>
-            </li>
-            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
-              <h3 class="fs-6 text-secondary">Average response time</h3><span class="fw-bold">3h 8m</span>
-            </li>
-            <li class="list-group-item d-flex flex-column align-items-center justify-content-center flex-grow-1">
-              <h3 class="fs-6 text-secondary">Resolution within SLA</h3><span class="fw-bold">94%</span>
-            </li>
+          <ul class="list-group list-group-flush border-start flex-grow-1 justify-content-between border-top-0"
+            id="trends">
           </ul>
         </div>
       </div>
